# irobot_shape_drawing

./: .gitignore  README.md  irobot_create_view.rviz
src/irobot_command/: CMakeLists.txt  package.xml
src/irobot_command/launch/: task.launch.py
src/irobot_command/src/: dock_client.cpp  trace_s.cpp  trace_seven.cpp  undock_client.cpp
src/path_viz/: package.xml  setup.cfg  setup.py
src/path_viz/path_viz/: path_viz.py
